--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,11 +13,20 @@
 
       <nav>
          <a href="/">Home</a>
-         <a href="/auth/signup">Signup</a>
-         <a href="/auth/login">Login</a>
-
+         
+         {{#if isLoggedIn}}
          <a href="/auth/logout">Logout</a>
          <a href="/profile">Profile</a>
+            {{#if isAdmin}}
+            <a href="/profile/admin">Admin</a>
+            {{/if}}
+         {{else}}
+         <a href="/auth/signup">Signup</a>
+         <a href="/auth/login">Login</a>
+         {{/if}}
+
+
+
       </nav>
 
       {{{body}}}
